; ModuleID = '/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_update_tri_layer.c'
source_filename = "/home/carl/AnghaBench/qmk_firmware/quantum/extr_quantum.c_update_tri_layer.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@layer_state = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @update_tri_layer(i32 %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32 %0, i32* %4, align 4
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32, i32* @layer_state, align 4
  %8 = load i32, i32* %4, align 4
  %9 = load i32, i32* %5, align 4
  %10 = load i32, i32* %6, align 4
  %11 = call i32 @update_tri_layer_state(i32 %7, i32 %8, i32 %9, i32 %10)
  %12 = call i32 @layer_state_set(i32 %11)
  ret void
}

declare dso_local i32 @layer_state_set(i32) #1

declare dso_local i32 @update_tri_layer_state(i32, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
